<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_medium"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_title_register"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputlayout_edName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInput_edName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_full_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputlayout_edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInput_edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputlayout_edconfirmEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInput_edconfirmEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_confirm_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_btn_send" />
    </LinearLayout>

</FrameLayout>